--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,13 +15,12 @@
       </div>
     </div>
   </div>
-</div>
 
-<div class="row">
   <div class="columns large-2 sidebar">
 
-    <hr class="large-hidden">
-    <ul>
+    <hr class="hide-for-large-up">
+    <br>
+    <ul class="side-nav">
       <li><%= link_to "Update Answer", answer_question_path(@question) %></li>
       <li><%= link_to "Edit", [:edit, @question] %></li>
 
@@ -33,4 +32,5 @@
     </ul>
 
   </div>
+
 </div>
