--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -18,7 +18,7 @@
 
   <div class="columns large-2 sidebar">
 
-    <hr class="hide-for-large-up">
+    <hr class="show-for-small-only">
     <br>
     <ul class="side-nav">
       <li><%= link_to "Update Answer", answer_question_path(@question) %></li>
