--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -34,3 +34,15 @@
   </div>
 
 </div>
+
+<div class="row">
+  <div class="colums">
+    <hr>
+    <ul class="inline-list">
+      <li><h4>Users who have updated this post:</h4></li>
+      <% @question.users.each do |user| %>
+        <li><%= user.username %></li>
+      <% end %>
+    </ul>
+  </div>
+</div>
